# multisnake

./: Cargo.toml  README.md
multisnake_client/: Cargo.toml
multisnake_client/src/: draw.rs  main.rs  network.rs  room_connection.rs  room_state.rs  state.rs  tui.rs
multisnake_server/: Cargo.toml
multisnake_server/src/: handlers.rs  main.rs  room_manager.rs  socket_handlers.rs  state.rs
multisnake_shared/: Cargo.toml
multisnake_shared/src/: lib.rs
src/: client.rs  server.rs  shared.rs
