[package]
name = "multi_snake"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures-util = "0.3.31"
macroquad = "0.4.14"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
